--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.4"
+    "react-native": "0.61.4",
+    "react-native-keyboard-input": "^6.0.0",
+    "react-native-keyboard-tracking-view": "^5.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
