--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^1.3.0",
     "react": "16.9.0",
     "react-native": "0.61.4",
     "react-native-keyboard-input": "^6.0.0",
